<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigation_player"
            style="@style/Widget.MLDPlayer.NavButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/player_tab"
            app:icon="@drawable/ic_nav_player"
            app:iconSize="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigation_import"
            style="@style/Widget.MLDPlayer.NavButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/import_tab"
            app:icon="@drawable/ic_nav_import"
            app:iconSize="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigation_settings"
            style="@style/Widget.MLDPlayer.NavButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings_tab"
            app:icon="@drawable/ic_nav_settings"
            app:iconSize="24dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
